$Id$

User-visible changes in version 0.9.4  (2010-  -  ):
* removed syntax `delete[range]', use `delete(condition)' instead
* syntax `y[x=15]' replaced with `y[index(15)]'

User-visible changes in version 0.9.3  (2010-06-24):
* changed implementation of gamma and related functions (using boost.math now)
* syntax: so-called parametrized-functions spline[] and interpolate[]
  are replaced by so-called variadic functions Spline() and Polyline().
  The GUI in the Baseline Mode handles a separate baseline for each dataset now.
* abandoned syntax like 5<x<10, use 5<x and x<10
* syntax: '*' wildcard can be used when deleting functions and variables
* GUI: changed numeric format in a few place (eg. coordinates on the status bar)
* GUI: added Functions > Auto-Freeze option that automatically locks/unlocks
  parameters of a peak when a data range containing the center of this peak 
  is disactivated/activated
* GUI: added option GUI > Zoom All Shows Y=0
* required Boost version (only in the compilation time) is now >= 1.36

User-visible changes in version 0.9.2  (2010-05-07):
* To compile fityk, Boost (only headers) and xylib must be installed first.
  Fityk tarball does not contain a copy of boost and xylib now.
* user-defined functions: split functions can be defined in this way:
  SplitG(h, c, w1, w2) = x < c ? Gaussian(h, c, w1) : Gaussian(h, c, w2)
* added info-numeric-format option
* a couple of bug fixes

User-visible changes in version 0.9.1  (2010-03-25):
* added cfityk to Windows installer
* Unix only: fitting can be interrupted by the INT signal
* changed output of "info errors", see the manual for details
* GUI: "plot in @n" changes selected datasets (useful in scripts)
* many bugs fixed

User-visible changes in version 0.9.0  (2010-01-05):
* GUI: Data > Editor dialog was replaced with two dialogs: Data > Table
  and Data > Edit Transformations
* added Lua bindings (configure option --enable-lua)