@@ -3,6 +3,8 @@ $Id$
 User-visible changes in version 0.9.4  (2010-  -  ):
 * removed syntax `delete[range]', use `delete(condition)' instead
 * syntax `y[x=15]' replaced with `y[index(15)]'
+* removed data range syntax, e.g. X[3...10]=15. It can be replaced
+  with X = n >= 3 and n < 10 ? 15 : x
 
 User-visible changes in version 0.9.3  (2010-06-24):
 * changed implementation of gamma and related functions (using boost.math now)
